fix horizontal scroll and meta theme color

--- a/css/style.css
+++ b/css/style.css
@@ -48,7 +48,7 @@ html {
       font-size: 85%; } }
   @media only screen and (max-width: 62em) {
     html {
-      font-size: 75%; } }
+      font-size: 70%; } }
   @media only screen and (min-width: 112.5em) {
     html {
       font-size: 75%; } }
