--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -15,7 +15,7 @@ html {
     }
 
     @include respond(tab-port) {
-        font-size: 75%;
+        font-size: 70%;
     }
 
     @include respond(big-desktop) {
